plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group = 'org.jwildfire'
version = 'latest-SNAPSHOT'

repositories {
    mavenCentral()
    flatDir { dirs 'lib' }
}

sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

sourceSets {
    main {
        java { srcDir 'src' }
        resources { srcDir 'resources' }
    }
    test {
        java { srcDir 'test/src' }
    }
}

application {
    mainClass = 'org.jwildfire.swing.JWildfire'
}

ext {
    javaFxVersion = '21.0.2'
    lwjglVersion = '3.3.3'
}

dependencies {
    // Core Dependencies
    implementation 'commons-collections:commons-collections:3.2.2'
    implementation 'com.kitfox.svg:svg-salamander:1.0'
    implementation 'colt:colt:1.2.0'
    implementation 'javazoom:jlayer:1.0.1'
    implementation 'edu.emory.mathcs:JTransforms:2.4'
    implementation 'org.scijava:jep:2.4.2'
    implementation 'com.jtattoo:JTattoo:1.6.11'
    implementation 'commons-io:commons-io:2.11.0'

    // Dependencies from lib folder (Legacy/Not in Maven Central)
    implementation fileTree(dir: 'lib', include: ['*.jar'], exclude: ['lwjgl.jar', 'junit*.jar', 'commons-io*.jar'])

    // JavaFX
    implementation "org.openjfx:javafx-base:${javaFxVersion}"
    implementation "org.openjfx:javafx-controls:${javaFxVersion}"
    implementation "org.openjfx:javafx-fxml:${javaFxVersion}"
    implementation "org.openjfx:javafx-graphics:${javaFxVersion}"
    implementation "org.openjfx:javafx-swing:${javaFxVersion}"
    
    // Linux specific JavaFX (Assuming Linux environment for the sandbox)
    implementation "org.openjfx:javafx-base:${javaFxVersion}:linux"
    implementation "org.openjfx:javafx-controls:${javaFxVersion}:linux"
    implementation "org.openjfx:javafx-fxml:${javaFxVersion}:linux"
    implementation "org.openjfx:javafx-graphics:${javaFxVersion}:linux"
    implementation "org.openjfx:javafx-swing:${javaFxVersion}:linux"

    // LWJGL
    implementation platform("org.lwjgl:lwjgl-bom:${lwjglVersion}")
    implementation "org.lwjgl:lwjgl"
    implementation "org.lwjgl:lwjgl-glfw"
    implementation "org.lwjgl:lwjgl-opengl"
    implementation "org.lwjgl:lwjgl-opencl"

    // LWJGL Natives (Linux)
    runtimeOnly "org.lwjgl:lwjgl::natives-linux"
    runtimeOnly "org.lwjgl:lwjgl-glfw::natives-linux"
    runtimeOnly "org.lwjgl:lwjgl-opengl::natives-linux"

    // Testing
    testImplementation 'junit:junit:4.13.2'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.release = 21
}

tasks.withType(Tar) { duplicatesStrategy = DuplicatesStrategy.EXCLUDE }
tasks.withType(Zip) { duplicatesStrategy = DuplicatesStrategy.EXCLUDE }

run {
    systemProperty "java.library.path", "lib"
}

shadowJar {
    mergeServiceFiles()
}
